updated avatar, fix title on small screens

--- a/css/header.less
+++ b/css/header.less
@@ -10,8 +10,6 @@ header {
   .avatar {
     width: 12rem;
     height: 12rem;
-    border: thin solid rgba(255, 255, 255, .25);
-    box-shadow: 0 0 .125px rgba(0, 0, 0, 1);
     .border-radius;
   }
   h1 {
