--- a/css/home.less
+++ b/css/home.less
@@ -32,7 +32,8 @@ ul.home {
   .next:after,
   .previous:before {
     font-size: 1.5rem;
-    line-height: 1.25rem;
+    line-height: 1rem;
+    display: inline-block;
   }
   .current {
     color: #333;
