--- a/css/post.less
+++ b/css/post.less
@@ -31,6 +31,7 @@
     padding: 1rem .5rem .5rem;
 	h1 {
 	  text-align: center;
+	  word-wrap: break-word;
 	}
   }
 }
